...
        <scene sceneID="AvB-mP-Phu">
            <objects>
                <tabBarController storyboardIdentifier="myTabBar" title="Budget" useStoryboardIdentifierAsRestorationIdentifier="YES" id="QS3-fT-gKR" sceneMemberID="viewController">
                    <navigationItem key="navigationItem" id="fH0-sF-x2G"/>
                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="7ef-GE-Xfx">
...
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Reminders" id="Xbn-Dl-WEH">
                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="OJn-nW-QSf">
                            <connections>
...
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter Quantity" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="kmT-xG-DtJ">
                                <rect key="frame" x="10" y="184" width="394" height="52"/>
                                <constraints>
...
                                <rect key="frame" x="47" y="340" width="320" height="216"/>
                            </datePicker>
                            <searchBar contentMode="redraw" text="" placeholder="Enter Product" translatesAutoresizingMaskIntoConstraints="NO" id="J5i-Zs-qoG">
                                <rect key="frame" x="10" y="108" width="394" height="56"/>
                                <textInputTraits key="textInputTraits"/>
...
        <scene sceneID="WTw-k6-lhj">
            <objects>
                <viewController storyboardIdentifier="more" id="YPF-o7-tIe" customClass="DetailViewController" customModule="CovidGains" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="NGA-TE-T47">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
...
                                <rect key="frame" x="120" y="115" width="160" height="104"/>
                                <subviews>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="$0.00" textAlignment="center" clearsOnBeginEditing="YES" minimumFontSize="17" clearButtonMode="always" translatesAutoresizingMaskIntoConstraints="NO" id="HR1-PQ-5WQ">
                                        <rect key="frame" x="0.0" y="0.0" width="160" height="52"/>
                                        <constraints>
...
                                        </constraints>
                                        <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                        <state key="normal" title="Allowance"/>
                                        <connections>
                                            <action selector="allowancePressed:" destination="I1e-h5-QmM" eventType="touchUpInside" id="vih-Hj-LXF"/>
...
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter Product Name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="nmR-Bd-bsc">
                                <rect key="frame" x="10" y="100" width="394" height="52"/>
                                <constraints>
...
                                <textInputTraits key="textInputTraits"/>
                            </textField>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter Price" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="W3d-iI-Pkk">
                                <rect key="frame" x="10" y="172" width="394" height="52"/>
                                <constraints>
...
            <objects>
                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="IYX-X3-KwQ" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Recipe" image="list.dash" catalog="system" id="MXV-vS-vkO"/>
                    <toolbarItems/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="s4O-j2-5ij">
...
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Notes" id="G9p-mO-xB8">
                        <barButtonItem key="leftBarButtonItem" title="LogOut" id="GdB-BV-MfP">
                            <connections>
...
                                <rect key="frame" x="32" y="295.5" width="350" height="305"/>
                                <subviews>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="qrM-aV-o3I">
                                        <rect key="frame" x="0.0" y="0.0" width="350" height="40"/>
                                        <constraints>
...
                                        <textInputTraits key="textInputTraits"/>
                                    </textField>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="eEZ-lD-mxY">
                                        <rect key="frame" x="0.0" y="80" width="350" height="40"/>
                                        <constraints>
...
                                        <fontDescription key="fontDescription" type="system" pointSize="25"/>
                                        <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        <state key="normal" title="Register"/>
                                        <connections>
                                            <action selector="registerPressed:" destination="EMK-uo-3Uq" eventType="touchUpInside" id="WZR-4k-mtR"/>
...
                                        <fontDescription key="fontDescription" type="system" pointSize="25"/>
                                        <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        <state key="normal" title="Login"/>
                                        <connections>
                                            <segue destination="Gze-K2-tYb" kind="presentation" modalPresentationStyle="fullScreen" id="fIu-8E-7Hq"/>
...
                                <rect key="frame" x="32" y="295.5" width="350" height="305"/>
                                <subviews>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Username" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="UbG-JK-u6w">
