...
    
    //when clicked + button on the top right
    @IBAction func newNotesButton(_ sender: Any) {
        guard let vc = storyboard?.instantiateViewController(identifier: "new") as? EntryViewController else{
            return
        }
        vc.title = "New Note"
        vc.navigationItem.largeTitleDisplayMode = .never
        vc.completion = {noteTitle, note in
            self.models.append((title: noteTitle, note: note))
            self.navigationController?.popToRootViewController(animated: true)
            self.table.reloadData()
            self.label.isHidden = true
...
